--- a/src/app/loan/loan.component.html
+++ b/src/app/loan/loan.component.html
@@ -32,7 +32,7 @@
     <h5 class="card-title">Personal Loans</h5>
     <p class="card-text">Get Home loans with minimum intrest and approved instantly</p>
     <a  routerLink="/intrest" class="btn btn-outline-primary btn-lg">Explore</a>
-    <button class="btn btn-outline-primary" type="button" [routerLink]="['register']"><i class="fa fa-fw fa-user-plus"></i>Signup</button>
+    <!-- <button class="btn btn-outline-primary" type="button" [routerLink]="['register']"><i class="fa fa-fw fa-user-plus"></i>Signup</button> -->
   </div>
 </div>
 </div>
