--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -10,11 +10,23 @@
 <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="col-6 aboutus">
-        <h1>About Us</h1>
+    <div class="row">
+         <div class="col-sm-6 aboutus">
+             <div class="container">
+                 <h1>About Us</h1>
         <p>Since 1940 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
     </div>
-    <div class="logo">
     </div>
+      </div>
+      <div class="row">
+          <div class="col-12 img-container">
+              <div class="images">
+                  <img src="./assets/img/image2.jfif" width="500px" alt="about1img">
+                   <img src="./assets/img/image2.jfif" width="500px" alt="about1img">
+                    <img src="./assets/img/image2.jfif" width="500px" alt="about1img">
+              </div>
+          </div>
+      </div>
+  
 </body>
 </html>
