--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -9,25 +9,25 @@
 <body>
     <div class="row">
         <div class="col-sm-6">
-            <form #user="ngForm" (submit)="register(user.value)">
+            <form #user (submit)="register(email.value, password.value)">
             <div class="form-group" id="myForm">
                 <h1>Register</h1>
-                <label for="First Name"><b>First Name</b></label>
+                <!-- <label for="First Name"><b>First Name</b></label>
                 <input type="text" class="form-control" placeholder="First Name" name="fname" required ngModel>
 
                 <label for="Last Name"><b>Last Name</b></label>
-                <input type="text" class="form-control" placeholder="Last Name" name="lname" required ngModel>
+                <input type="text" class="form-control" placeholder="Last Name" name="lname" required ngModel> -->
 
                 <label for="Email"><b>Email</b></label>
-                <input type="email" class="form-control" placeholder="Email" name="email" required ngModel>
+                <input type="email" class="form-control" placeholder="Email" name="email" required #email >
     
                 <label for="psw"><b>Password</b></label>
-                <input type="password" class="form-control" placeholder="password" name="password" required ngModel>
+                <input type="password" class="form-control" placeholder="password" name="password" required #password>
 
                 <br>
-                <p>OTP: </p><p>{{secretkey}}</p>
+                <!-- <p>OTP: </p><p>{{secretkey}}</p>
                 <input type="number" class="form-control" placeholder="4-digit OTP" name="otppin">
-                <br>
+                <br> -->
                 <button type="submit"   class="btn btn-primary">Signup</button>
             </div>
             </form>
