--- a/src/app/aboutus/aboutus.component.css
+++ b/src/app/aboutus/aboutus.component.css
@@ -15,11 +15,11 @@ p::first-letter{
     font-weight: bold;
     margin-right: 9px;
 }
-body{
+/* body{
     background-color: antiquewhite;
     margin: 50px;
     height: 50vh;
-}
+} */
 
 img{
     display: inline;
