--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -10,6 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <app-navbar></app-navbar>
     <div class="row">
          <div class="col-sm-6 aboutus">
              <div class="container">
