--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,6 +28,7 @@
             </ul>
         </div>
         <div *ngIf = "isSignedIn; else authbuttons">
+          <p>{{email}}</p>
           <p><a [routerLink] = "['profile']"> <i class='bx bxs-face-mask bx-lg'></i></a></p>
           
           <button class="btn btn-outline-primary" type="button" [routerLink] = "['register']"><i class="fa fa-fw fa-user-plus"></i>Signout</button>
