--- a/src/app/loan/loan.component.html
+++ b/src/app/loan/loan.component.html
@@ -7,6 +7,7 @@
     <title>Loan</title>
 </head>
 <body>
+  <app-navbar></app-navbar>
     <div class="col-9">
         <div class="container">
             <h1>Loans</h1>
