--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -14,4 +14,10 @@ button{
     float: right;
 }
 
+span{
+    color: red;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 18px;
+}
+
 
