--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="row">
         <div class="col-sm-6">
             <form #user  (submit)="loginuser(email.value , password.value)">
@@ -15,7 +16,6 @@
                 <input type="number" class="form-control" placeholder="" name="otp"> -->
                 <br>
                 <button type="submit" class="btn btn-primary">Login</button>
-
             </div>
             </form>
         </div>
