--- a/src/app/sicalcy/sicalcy.component.html
+++ b/src/app/sicalcy/sicalcy.component.html
@@ -7,6 +7,7 @@
 	<title>Emi and Loan</title>
 </head>
 <body>
+	<app-navbar></app-navbar>
 	<div class="sicalcy">
 		<div class="row">
 			<div class="col-5 calcy">
